--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.0",
+    "postcss": "^8.4.4",
+    "tailwindcss": "^2.2.19",
     "vue": "^3.2.16",
     "vue-router": "^4.0.12"
   },
